objects/Coverage__c.object
<CustomObject>
    <description>To track the coverages related a benefit agreement.</description>
    <fields>
        <fullName>Benefit_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Benefit agreement for this coverage.</description>
        <label>Benefit Agreement</label>
        <referenceTo>Benefit_Agreement__c</referenceTo>
        <relationshipLabel>Coverages</relationshipLabel>
        <relationshipName>Coverages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the coverage.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>Coverage effective date.</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Coverage end date.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>External Id field for legacy id for integration</description>
        <externalId>true</externalId>
        <label>Coverage Number</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>BlueStar - Coverage type from MRDB.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>24NL</fullName>
                </value>
                <value>
                    <fullName>BCAV</fullName>
                </value>
                <value>
                    <fullName>BCC</fullName>
                </value>
                <value>
                    <fullName>BLEX</fullName>
                </value>
                <value>
                    <fullName>BLPT</fullName>
                </value>
                <value>
                    <fullName>CDRG</fullName>
                </value>
                <value>
                    <fullName>CMM</fullName>
                </value>
                <value>
                    <fullName>DENT</fullName>
                </value>
                <value>
                    <fullName>DRUG</fullName>
                </value>
                <value>
                    <fullName>FIT</fullName>
                </value>
                <value>
                    <fullName>HRA</fullName>
                </value>
                <value>
                    <fullName>MTBS</fullName>
                </value>
                <value>
                    <fullName>PHM</fullName>
                </value>
                <value>
                    <fullName>SCBG</fullName>
                </value>
                <value>
                    <fullName>VIS</fullName>
                </value>
                <value>
                    <fullName>WEL</fullName>
                </value>
                <value>
                    <fullName>WLSC</fullName>
                </value>
                <value>
                    <fullName>WSWL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Coverage</label>
    <nameField>
        <label>Coverage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Coverages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>